1998-08-10  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuni.ads: Make Cache_Type into a limited type whose
	primitive use the global lock instead of a protected type.

	* s-garuni.adb: Likewise.

	* s-parint.adb: Use new primitives for Cache_Type objects.
	Do not Fatal_Error anymore, and remove select then abort statement 
	that can be avoided.

	* s-garhea.ads: Replace protected object Shutdown_Keeper by an
	inline function Is_Shutdown_In_Progress, which does the very same
	job but is very light weight.
	Remove Fatal_Error which was useless.

	* s-garhea.adb: Likewise.

	* s-gartcp.adb: Use new Shutdown_In_Progress function instead of
	Shutdown_Keeper.

	* s-garter.adb: Likewise.

1998-08-06  Samuel Tardieu  <sam@inf.enst.fr>

	* 5wgtplsp.ads: Fix typo in unit name.

1998-08-04  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garrem.adb: Do not add -n inconditionnally onto the launcher
	command line.

	* Makefile.am (COMMONSOURCES): Get s-gatcop.ads from the build
	directory instead of the source directory (it won't be present
	there if VPATH is used).

1998-08-04  Laurent Pautet  <pautet@scapin.enst.fr>

	* 5egtplsp.ads, 5sgtplsp.ads, 5wgtplsp.adb, 5wgtplsp.ads,
 	5xgtplsp.ads, s-gartcp.adb: Change s-gtplsp unit
 	name to avoid recompiling too many files when isthrbio is built at
 	configuration time.
	
	* isthrbio.adb: With System.Garlic.TCP_Platform_Specific to
	please Windows configuration.
	
1998-08-04  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (inlining): Fix a bug causing an error at
	installation time when no inlining at all was present.

	* isthrbio.adb: Use GNAT style and add copyright information.

1998-08-03  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (inlining): Look for lines beginning by D when
	looking for dependencies, thus avoiding useless recompilations in
	the case of a non-inlined library.
	Add System.Garlic.Locking.

	* s-gardeb.adb: Style fixes, subprograms reordering.
	Remove useless pragma Elaborate_All on predefined pure package.
